[project]
name = "final-exp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "pillow>=11.2.1",
    "plotly>=6.1.2",
    "scikit-learn>=1.6.1",
    "six>=1.17.0",
    "torch>=2.7.0",
    "torch-vision>=0.1.6.dev0",
]
